[package]
name = "es-token-metadata"
version = "0.1.0"
description = "Earthshine Token Metadata Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "es_token_metadata"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = "0.24.2"
anchor-spl = "0.24.2"
shank = { version = "^0.0.2" }
solana-program = "~1.9.5"
arrayref = "^0.3.6"

